# pyarnes

./: .gitignore  .markdownlint.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  copier.yml  mkdocs.yml  pyproject.toml
.claude/: settings.json
.claude/commands/: tdd.md
.github/: dependabot.yml
.github/hooks/: pre-destructive-check.py  pre-destructive.json
.github/prompts/: claudemap.prompt.md  tdd.prompt.md
.github/workflows/: ci.yml  docs.yml  publish.yml
deep-dive/: pyarnes-swarm-consolidation-specs-2026-04-28.md
docs/: index.md  template.md
docs/adopter/: index.md
docs/adopter/bootstrap/: first-steps.md  install.md  scaffold.md
docs/adopter/evaluate/: concepts.md  distribution.md  errors.md  faq.md  lifecycle.md  logging.md  security.md  when-to-use.md
docs/api/: capture.md  errors.md  guardrails.md  lifecycle.md  logging.md  loop.md  registry.md  types.md
docs/architecture/: errors.md  lifecycle.md  meta-use.md  overview.md  pyarnes-bench.md  pyarnes-core.md  pyarnes-harness.md  pyarnes-tasks.md
docs/assets/diagrams/: README.md  adopter-journey.mmd  concepts-error-routing.mmd  concepts-lifecycle-fsm.mmd  index-persona-map.mmd  install-sequence.mmd  maintainer-journey.mmd  monorepo-architecture.mmd  onboard-daily-loop.mmd  packages-depgraph.mmd  quickstart-sequence.mmd  release-flow.mmd  scaffold-flow.mmd  tdd-red-green-refactor.mmd
docs/development/: evolving.md  extending.md  release.md  tasks.md  template.md  testing.md
docs/getting-started/: distribution.md  installation.md  quickstart.md
docs/maintainer/: index.md  release.md
docs/maintainer/extend/: architecture.md  mcp-tools.md  rules.md  skills.md  template.md  workflow.md
docs/maintainer/onboard/: setup.md  testing.md
docs/reference/: capture.md  errors.md  glossary.md  guardrails.md  lifecycle.md  logging.md  loop.md  mcp-tools.md  registry.md  types.md
docs/reviews/: phase-8a-classification-review.md
docs/stylesheets/: extra.css
examples/: README.md
examples/with-pyarnes/: agent.py
examples/without-pyarnes/: agent.py
plugins/: _codeburn_common.py  audit_analyze.py  audit_check.py  audit_show.py  bench_report.py  bench_run.py  burn_report.py  check_redirects.py  ci.py  codeburn_compare.py  codeburn_kpis.py  codeburn_optimize.py  graph_blast.py  md_format.py  md_lint.py  observer_filter.py  observer_tail.py  post_scaffold.py  profile.py  pylint.py  radon_cc.py  refactor.py  serve_specs.py  shell_pipe.py  smoke_template.py  test_watch.py  typecheck.py  update.py  vulture.py  yaml_lint.py
scripts/: check_redirects.py  smoke-template.sh  validate_redirects.py
specs/: 01-core-stable-api-surface.md  02-template-adopter-scaffold.md  03-examples-adopter-a-and-b.md  04-template-adopter-c-meta-use.md  05-docs-distribution-and-meta-use.md  PR-01-graph-package-foundation.md  PR-02-extractor-and-indexer.md  PR-03-analytics-and-report.md  PR-04-tools-mcp-and-hook.md  PR-05-eval-and-usage-tracking.md  PR-06-skills-template-docs.md  README.md  bench-fact-evaluator.md  bench-race-evaluator.md  bench-scorer-verdict.md  bench-use-cases-coding-and-deep-agents.md  claudecode-pyarnes-judge-plugin.md  harness-feature-expansion.md  harness-loop-budget-hooks.md  harness-run-logger.md
specs/archive/: 01-core-stable-api-surface.md  bench-fact-evaluator.md
specs/consolidation/: 00-overview.md  01-package-structure.md  02-message-bus.md  02-test-strategy.md  03-model-router.md  03-test-map.md  04-dead-code-audit.md  04-swarm-api.md  05-dead-code-audit.md  05-message-bus.md  06-hook-integration.md  06-model-router.md  07-bench-integrated-axes.md  07-swarm-api.md  08-test-strategy.md  08-token-budget.md  09-loop-hooks.md  09-test-map.md  10-hook-integration.md  10-provider-config.md  11-message-safety.md  11-secrets.md  12-token-budget.md  12-transport.md  13-provider-config.md  13-run-logger.md  14-deferred-features.md  14-secrets.md  15-bench-integrated-axes.md  15-tooling-artifacts.md  16-api-surface-governance.md  16-run-logger.md  17-template-version-control.md  17-tooling-artifacts.md  18-api-surface-governance.md  18-evaluation-taxonomy.md  19-claude-judge-plugin.md  19-template-version-control.md  20-graph-package.md  20-message-safety.md  (+7 more)
specs/consolidation/assets/: specs.css  specs.js
specs/consolidation/diagrams/: 00-tool-dispatch.html  01-package-structure.html  03-router-pipeline.html  04-dead-code-lifecycle.html  04-lifecycle-fsm.html  06-router-pipeline.html  (+16 more)
src/pyarnes/: __init__.py  types.py
template/: .gitignore  .yamllint.yaml  AGENTS.md  AGENTS.md.jinja  CLAUDE.md.jinja  LICENSE.jinja  README.md.jinja  mkdocs.yml.jinja  pyproject.toml.jinja
template/.claude/: settings.json.jinja
template/docs/: index.md.jinja
template/plugins/: audit_build.py  bench_run.py  check.py  codeburn_kpis.py  complexity.py  docs.py  format.py  graph_render.py  lint.py  post_scaffold.py  radon_mi.py  security.py  test.py  test_cov.py
tests/: __init__.py  conftest.py
tests/features/: __init__.py  acceptance.feature  code_audit.feature  codeburn.feature  fact_evaluation.feature  feature_validation.feature  harness.feature  race_evaluation.feature
tests/template/: conftest.py  test_dev_hooks.py  test_scaffold.py
tests/unit/: test_agent_context.py  test_api.py  test_atomic_write.py  test_audit_analyze.py  test_audit_audit.py  test_audit_builder.py  test_audit_config.py  test_audit_duplicates.py  test_audit_events.py  test_audit_parser.py  test_audit_schema.py  test_audit_store.py  test_benchmark_gate.py  test_budget.py  test_capture.py  test_cc_session.py  test_classifier.py  test_compaction.py  test_compressor.py  test_docs_examples.py  test_error_registry.py  test_errors.py  test_guardrails.py  test_guardrails_catalog.py  test_hardening.py  test_hooks.py  test_injection.py  test_integration.py  test_iteration_budget.py  test_lifecycle.py  test_logger.py  test_loop.py  test_observability_tokens.py  test_observer.py  test_output_capture.py  test_parallel.py  test_post_scaffold.py  test_redact.py  test_registry.py  test_repair.py  (+17 more)
(+130 files in other folders)
